--- a/package.json
+++ b/package.json
@@ -19,12 +19,14 @@
   },
   "dependencies": {
     "@hookform/resolvers": "^3.3.4",
+    "@payloadcms/bundler-vite": "^0.1.7",
     "@payloadcms/bundler-webpack": "^1.0.6",
     "@payloadcms/db-mongodb": "^1.5.1",
     "@payloadcms/richtext-slate": "^1.5.1",
     "@radix-ui/react-dialog": "^1.0.5",
     "@radix-ui/react-dropdown-menu": "^2.0.6",
     "@radix-ui/react-label": "^2.0.2",
+    "@radix-ui/react-navigation-menu": "^1.1.4",
     "@radix-ui/react-scroll-area": "^1.0.5",
     "@radix-ui/react-separator": "^1.0.3",
     "@radix-ui/react-slot": "^1.0.2",
@@ -46,6 +48,7 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-hook-form": "^7.51.3",
+    "react-spinners": "^0.13.8",
     "resend": "^3.2.0",
     "sonner": "^1.4.41",
     "stripe": "^15.4.0",
